# find-identical-files

./: .gitignore  Cargo.toml  LICENSE  README.md  update_completions.sh
.cargo/: config.toml
benches/: jwalk_entries.rs
completions/: completion_derive.bash  completion_derive.elvish  completion_derive.fish  completion_derive.powershell  completion_derive.zsh  readme
release-v0.15.5/x86_64-unknown-linux-gnu/: find_duplicate_files
src/: algorithms.rs  args.rs  error.rs  excel.rs  lib.rs  main.rs  separator.rs  structures.rs  traits.rs  with_jwalk.rs  with_walkdir.rs
src/enumerations/: algo.rs  mod.rs  procedures.rs
src/structures/: file_info.rs  group_info.rs  key_info.rs  mod.rs  path_info.rs  total_info.rs
