[package]
name = "find_duplicate_files"
authors = ["Claudio F S Rodrigues <claudiofsrodrigues@gmail.com>"]
version = "0.17.0"
repository = "https://github.com/claudiofsr/find_duplicate_files"
homepage = "https://github.com/claudiofsr/find_duplicate_files"
documentation = "https://docs.rs/find_duplicate_files/latest/find_duplicate_files/"
edition = "2021"
description = "find duplicate files according to their size and hashing algorithm"
license = "BSD-3-Clause"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = [
    "find",
    "duplicate",
    "hash",
    "blake3",
    "fxhash",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ahash = "0.8"
anstyle = "1.0"
blake3 = { version = "1.5", features = ["rayon"] }
clap = { version = "4.4", features = ["derive", "color", "unstable-styles"] }
clap_complete = "4.4"
hashbrown = { version = "0.14", features = ["rayon", "ahash"] }
jwalk = { version = "0.8" }
rayon = "1.8"
ring = "0.17"
rustc-hash = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = { version = "2.4", optional = true }

[features]
walkdir = ["dep:walkdir"]

# Mutually exclusive features: jwalk (default) or walkdir.
# To use walkdir features:
# cargo b -r && cargo install --path=. --features walkdir

# Package release:
# On Manjaro Linux, install with: pacman -S mingw-w64-gcc
# rustup target list
# After downloading the target with `rustup target add x86_64-pc-windows-gnu`
# cargo b -r --target x86_64-unknown-linux-gnu --target x86_64-pc-windows-gnu

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
debug = false           # No debug info at all.
strip = "symbols"       # Strip symbols from a binary.
opt-level = 3           # All optimizations.
overflow-checks = true  # Panic will occur on overflow.
lto = true              # Enable link time optimization.
codegen-units = 1       # Use a single codegen for size optimization.
panic = "abort"         # Remove traceback information.
incremental = true      # Save information to disk, improving re-compile times.

[profile.dev]
opt-level = 1           # Use slightly better optimizations.
